# help-desk-service

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  Procfile  README.md  docker-compose.yml  interfaces.py  makefile  manage.py  manifest.yml  pii-ner-exclude.txt  pii-secret-exclude.txt  pyproject.toml  requirements.txt  schema.yml  setup.cfg  zendesk_manager.py
.circleci/: config.yml
.copilot/: config.yml
config/: asgi.py  mapping.json  temp_mw.py  tempmid.py  urls.py  wsgi.py
config/settings/: base.py  local.py  prod.py
dit_team/: apps.py  models.py
docker/: Dockerfile.dev
docs/: environment-variables.md  zendesk-to-halo-mapping.md  zendesk.md
email_router/: lambda-layer-requirements.txt
email_router/events/: s3-test-event.json
email_router/ses_email_receiving/: app.py  email_utils.py
email_router/ses_email_receiving/email_parser/: parsed_email.py
email_router/smtp/: ses.py
email_router/tests/unit/: conftest.py  test_email_utils.py  test_parsed_email.py
email_router/tests/unit/email_utils/: conftest.py  test_api_client.py  test_halo_api_client.py  test_microservice_api_client.py  test_parsed_email.py
email_router/tests/unit/fixtures/emails/: email-sans-attachments.txt  google-dmarc-email-without-body.txt  inline-attachment-only.txt  outlook-email.txt  plain-text-email.txt  plain-text-reply-to-ticket-email.txt  (+4 more)
email_router/utils/: build_layer.py
halo/: apps.py  base_webhook.py  clam_av.py  data_class.py  halo_api_client.py  halo_manager.py  halo_to_slack.py  halo_to_zendesk.py  halo_webhooks.py  interfaces.py  message_tools.py  slack_api.py  zendesk_to_halo.py
healthcheck/: middleware.py  urls.py  views.py
healthcheck/templates/healthcheck/: healthcheck.xml
help_desk_api/: admin.py  apps.py  auth.py  forms.py  models.py  pagination.py  schema.py  serializers.py  urls.py  utils.py  views.py
help_desk_api/fixtures/: value-customfield-fixtures.json
help_desk_api/initial_data/: country.json  custom_field_data.json  custom_fields.json  great_zendesk_custom_fields.csv  sector.json
help_desk_api/management/commands/: av_scan_file.py  create_halo_EDES_ticket.py  create_halo_action.py  create_halo_api_error.py  create_halo_teams.py  create_halo_ticket.py  create_halo_ticket_comment.py  create_halo_upload.py  create_halo_user.py  create_halo_user_from_zendesk_user.py  create_ticket_via_middleware.py  create_zendesk_ticket.py  create_zendesk_ticket_from_email.py  create_zendesk_ticket_like_data_workspace.py  document_zendesk_automations.py  document_zendesk_custom_fields.py  document_zendesk_macros.py  document_zendesk_macros_json.py  document_zendesk_triggers.py  document_zendesk_views.py  export_zendesk_to_halo_field_mappings.py  extract_zendesk_email_templates.py  extract_zendesk_macro_templates.py  extract_zendesk_variables.py  generate_data_flow_dag.py  generate_mappings_v2.py  generate_test_dep_field_mapping.py  generate_zendesk_to_halo_custom_field_mapping.py  generate_zendesk_to_halo_field_mappings.py  generate_zendesk_to_halo_service_mapping.py  get_bulk_halo_ticket.py  get_halo_actions.py  get_halo_custom_table.py  get_halo_field.py  get_halo_fields.py  get_halo_sites.py  get_halo_teams.py  get_halo_ticket.py  get_halo_ticket_attachments.py  get_halo_ticket_rules.py  (+27 more)
help_desk_api/management/templates/: actions.html  base.html  conditions.html  custom_fields.html  macro_actions.html  macros.html  triggers.html  views.html
help_desk_api/management/templates/codegen/: field_mappings.py.txt
help_desk_api/migrations/: 0001_initial.py  0002_helpdeskcreds_halo_client_id_and_more.py  0003_alter_helpdeskcreds_help_desk.py  0004_helpdeskcreds_note.py  0005_value_customfield.py  0006_customfield_is_multiselect.py  0007_alter_value_halo_id.py  0008_alter_customfield_values.py  0009_load_initial_custom_field_data.py
help_desk_api/utils/: __init__.py  field_mappings.py  generated_field_mappings.py  macros.py  staging_field_id_mappings.py  utils.py  views.py  zendesk_to_halo_service_mappings.py
help_desk_api/utils/document_generation/: fields.py  triggers.py
help_desk_client/: __init__.py  halo_api_client.py  halo_manager.py  interfaces.py  zendesk_manager.py
help_desk_client/tests/: test_zendesk_manager.py
scripts/utils/: utils.py
setup/: init.sql
tests/: conftest.py
tests/fixture_data/halo/: user.py
tests/fixture_data/zendesk/: user.py
tests/halo_api/: conftest.py  test_halo_agent.py  test_halo_api.py  test_halo_attachment_api.py  test_halo_comments_api.py  test_halo_pagination.py  test_halo_tickets_api.py  test_halo_to_zendesk_transformation.py  test_halo_user_api.py  test_ticket_serialiser_unsupported_fields.py  test_user_unsupported_fields.py  test_zendesk_to_halo_transformation.py
tests/healthcheck/: test_healthcheck.py
tests/help_desk_api/: clean_file.txt  test_clamav.py  test_halo_api_views.py  test_models.py
tests/other_services/: conftest.py  test_datahub.py  test_datahub_support_form.py
tests/other_services/data_workspace/: conftest.py  test_ticket.py
tests/other_services/datahub/: conftest.py  test_datahub.py  test_datahub_support_form.py
tests/other_services/directory_forms_api/: conftest.py  test_get_or_create_user.py
tests/other_services/directory_forms_api/ess/: conftest.py  test_ess_ticket.py  test_ticket.py  test_user.py
tests/other_services/directory_forms_api/fixtures/: halo-user.json
tests/other_services/great_cms/: conftest.py  test_great_forms.py
tests/zendesk_api_proxy/: conftest.py  test_credentials.py  test_dual_running.py  test_middleware.py  test_supported_operations.py
user/: admin.py  backends.py  models.py
user/migrations/: 0001_initial.py
zendesk_api_proxy/: apps.py  middleware.py
(+4 files in other folders)
